# svpi

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh
api/: API.postman_collection.json  api.js  api.md  chrome-api.js  server-api.js
docs/: api.md  architecture.md  dump.md  install.md  master-password.md  migration.md  security.md
src/: cli.rs  config.rs  main.rs
src/api/: mod.rs  seg_mgmt.rs
src/api/chrome/: mod.rs
src/api/chrome/commands/: get_data.rs  list.rs  mod.rs  status.rs
src/api/routes/: get_data.rs  list.rs  mod.rs  status.rs
src/api/server/: mod.rs
src/api/server/routes/: get_data.rs  list.rs  mod.rs  status.rs
src/data_mgr/: fs.rs  io.rs  memory.rs  mod.rs  serial_port.rs
src/pass_mgr/: data.rs  encryption.rs  mod.rs  password.rs
src/protocol/: api.rs  errors.rs  mod.rs  segments.rs
src/seg_mgmt/: addresses.rs  data.rs  mem_mgmt.rs  metadata.rs  mod.rs  segment.rs  types.rs
src/seg_mgr/: addresses.rs  data.rs  encryption.rs  mem_mgmt.rs  metadata.rs  mod.rs  segment.rs
src/spdm/: device.rs  mod.rs  srwp.rs  types.rs
src/svpi/: cli_mode.rs  data.rs  device.rs  mod.rs  password.rs  result.rs  utils.rs
src/utils/: args.rs  console.rs  crypto.rs  dump.rs  mod.rs  response.rs  terminal.rs  variables.rs
