[package]
name = "svpi"
version = "2.9.0"
edition = "2021"

[dependencies]
serialport = { version = "4.7.2", default-features = false }
ring = "0.17.14"
rpassword = "7.4.0"
arboard = "3.5.0"
base64 = "0.22.1"
base58 = "0.2.0"

# For API
tokio = { version = '1.45.1', features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"

# Storage Interface
serialport_srwp = "2.2.1"
