[package]
name = "svpi"
version = "6.9.0"
edition = "2021"

[features]
default = []

[dependencies]
# Core
thiserror = "2.0.18"
arboard = "3.6.1"
hex = "0.4.3"
base58 = "0.2.0"
base64 = "0.22.1"
borsh = "1.6.0"
borsh-derive = "1.6.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.56", features = ["derive"] }

# For API
tokio = { version = '1.49.0', features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"

# For Cryptography
rpassword = "7.4.0"
sha2 = "0.10.9"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
zeroize = "1.8.2"
shlex = "1.3.0"
rustyline = "17.0.2"

# Storage Interface
serialport_srwp = "2.2.6"
